css z-index fixes for rotoslider #744

--- a/sites/all/modules/rotoslider/css/rotoslider.image.css
+++ b/sites/all/modules/rotoslider/css/rotoslider.image.css
@@ -11,13 +11,13 @@
   height: 390px;
   overflow: hidden;
   position: absolute;
+  z-index: 11;
 }
 .rotoslider img.rotoslider-image {
   z-index: 1;
 }
 .rotoslider .rotoslider-images img {
   display: none;
-  z-index: 11;
 }
 .rotoslider .rotoslider-images img.active {
   display: block;
@@ -46,7 +46,7 @@
   margin-bottom: 0;
 }
 .rotoslider .rotoslider-description {
-  z-index: 2;
+  z-index: 12;
 }
 .rotoslider .rotoslider-text {
   bottom: 0;
